--- a/index.html
+++ b/index.html
@@ -69,5 +69,371 @@
         </div>
       </div>
     </header>
+    <div class="content-wrapper">
+      <section class="hero-section">
+        <div class="container">
+          <div class="hero-section-content">
+            <div class="hero-section-slider"></div>
+            <div class="hero-section-details">Test</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gift-section">
+        <div class="container">
+          <h1 class="display-4 text-danger text-center">
+            Great gift idea for all occasions
+          </h1>
+        </div>
+        <div class="gift-section-content">
+          <div class="container">
+            <div class="gift-cards">
+              <div class="gift-card">
+                <img
+                  class="main-img"
+                  src="https://placehold.co/600x400"
+                  alt=""
+                />
+                <img
+                  class="hover-img"
+                  src="https://placehold.co/600x400/00000/fff"
+                  alt=""
+                />
+              </div>
+              <div class="gift-card">
+                <img
+                  class="main-img"
+                  src="https://placehold.co/600x400"
+                  alt=""
+                />
+                <img
+                  class="hover-img"
+                  src="https://placehold.co/600x400/00000/fff"
+                  alt=""
+                />
+              </div>
+              <div class="gift-card">
+                <img
+                  class="main-img"
+                  src="https://placehold.co/600x400"
+                  alt=""
+                />
+                <img
+                  class="hover-img"
+                  src="https://placehold.co/600x400/00000/fff"
+                  alt=""
+                />
+              </div>
+              <div class="gift-card">
+                <img
+                  class="main-img"
+                  src="https://placehold.co/600x400"
+                  alt=""
+                />
+                <img
+                  class="hover-img"
+                  src="https://placehold.co/600x400/00000/fff"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="category-section">
+        <div class="container">
+          <h1 class="section-title text-center">Shop by Category</h1>
+          <div class="category-section-content">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="product-card">
+                  <div class="product-img-wrapper">
+                    <img
+                      src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                      alt=""
+                      class="product-img"
+                    />
+                    <img
+                      src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                      alt=""
+                      class="product-img-bg"
+                    />
+                  </div>
+                </div>
+                <h2 class="category-name">Eatable Care Packs</h2>
+              </div>
+              <div class="col-md-4">
+                <div class="product-card">
+                  <div class="product-img-wrapper">
+                    <img
+                      src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                      alt=""
+                      class="product-img"
+                    />
+                    <img
+                      src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                      alt=""
+                      class="product-img-bg"
+                    />
+                  </div>
+                </div>
+                <h2 class="category-name">Eatable Care Packs</h2>
+              </div>
+              <div class="col-md-4">
+                <div class="product-card">
+                  <div class="product-img-wrapper">
+                    <img
+                      src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                      alt=""
+                      class="product-img"
+                    />
+                    <img
+                      src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                      alt=""
+                      class="product-img-bg"
+                    />
+                  </div>
+                </div>
+                <h2 class="category-name">Eatable Care Packs</h2>
+              </div>
+            </div>
+            <div class="text-center mt-3">
+              <button class="button">Shop Now</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="how-it-works-sections">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 order-md-1 order-2">
+              <h1 class="section-title">How It Works</h1>
+              <p>
+                Simply browsa our assortment of eatable or personal care Family
+                Love Packs. Our packs are pre-packaged to make it easy for you
+                to choose. We also have a selection of wearable items to choose
+                from. New items may be added in the future, so check back with
+                us from time to time.
+              </p>
+              <h2 class="section-subtitle mb-4">Ordering is Simple and Easy</h2>
+              <div class="row">
+                <div class="col-sm-6">
+                  <img
+                    class="img-thumbnail"
+                    src="https://placehold.co/600x600/png"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-6 pt-4 pt-sm-0">
+                  <ul>
+                    <li>1. Locate your loved one.</li>
+                    <li>2. Select your gift item(s).</li>
+                    <li>3. Create an account.</li>
+                    <li>4. Confirm your order and delivery.</li>
+                  </ul>
+                  <a href="#">Click to read details.</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 order-1 pb-4 pb-md-0">
+              <img
+                class="img-thumbnail"
+                src="https://placehold.co/600x600/png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="container">
+          <h1 class="section-title text-center mb-5">Featured Products</h1>
+          <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4">
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="text-center my-5">
+            <button class="button">Shop Now</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-sale bg-danger">
+        <div class="container">
+          <div class="section-sale-box">
+            <div class="section-sale-box-inner text-center">
+              <img
+                src="https://placehold.co/600x400/e42020/e82323/png"
+                alt=""
+              />
+              <div class="sale-offer">20% OFF</div>
+              <div class="sale-offer-title">CLEARANCE ITEMS</div>
+              <a class="sale-offer-link" href="#">See sale items</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
