--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./assets/scss/styles.css" />
   </head>
   <body>
@@ -89,50 +96,34 @@
           <div class="container">
             <div class="gift-cards">
               <div class="gift-card">
-                <img
-                  class="main-img"
-                  src="https://placehold.co/600x400"
-                  alt=""
-                />
+                <img class="main-img" src="/assets/images/idea1.png" alt="" />
                 <img
                   class="hover-img"
-                  src="https://placehold.co/600x400/00000/fff"
+                  src="/assets/images/idea1hover.png"
                   alt=""
                 />
               </div>
               <div class="gift-card">
-                <img
-                  class="main-img"
-                  src="https://placehold.co/600x400"
-                  alt=""
-                />
+                <img class="main-img" src="/assets/images/idea2.png" alt="" />
                 <img
                   class="hover-img"
-                  src="https://placehold.co/600x400/00000/fff"
+                  src="/assets/images/idea2hover.png"
                   alt=""
                 />
               </div>
               <div class="gift-card">
-                <img
-                  class="main-img"
-                  src="https://placehold.co/600x400"
-                  alt=""
-                />
+                <img class="main-img" src="/assets/images/idea3.png" alt="" />
                 <img
                   class="hover-img"
-                  src="https://placehold.co/600x400/00000/fff"
+                  src="/assets/images/idea3hover.png"
                   alt=""
                 />
               </div>
               <div class="gift-card">
-                <img
-                  class="main-img"
-                  src="https://placehold.co/600x400"
-                  alt=""
-                />
+                <img class="main-img" src="/assets/images/idea4.png" alt="" />
                 <img
                   class="hover-img"
-                  src="https://placehold.co/600x400/00000/fff"
+                  src="/assets/images/idea4hover.png"
                   alt=""
                 />
               </div>
@@ -167,7 +158,7 @@
                 <div class="product-card">
                   <div class="product-img-wrapper">
                     <img
-                      src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                      src="./assets/images/products/FL-Mr-Hygiene.png"
                       alt=""
                       class="product-img"
                     />
@@ -184,7 +175,7 @@
                 <div class="product-card">
                   <div class="product-img-wrapper">
                     <img
-                      src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                      src="./assets/images/catecory3.jpg"
                       alt=""
                       class="product-img"
                     />
@@ -222,7 +213,7 @@
                 <div class="col-sm-6">
                   <img
                     class="img-thumbnail"
-                    src="https://placehold.co/600x600/png"
+                    src="/assets/images/Computerandphone.jpg"
                     alt=""
                   />
                 </div>
@@ -240,7 +231,7 @@
             <div class="col-md-6 order-1 pb-4 pb-md-0">
               <img
                 class="img-thumbnail"
-                src="https://placehold.co/600x600/png"
+                src="/assets/images/motherandchild.jpg"
                 alt=""
               />
             </div>
@@ -256,7 +247,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Premium-Pack.png"
                     alt=""
                     class="product-img"
                   />
@@ -276,7 +267,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Rise-n-Shine-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -296,7 +287,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Tuna-Lovers-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -316,7 +307,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Lets-Eat-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -336,7 +327,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Grab-n-Go.png"
                     alt=""
                     class="product-img"
                   />
@@ -356,7 +347,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-The-Real-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -376,7 +367,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Spice-Me-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -396,7 +387,7 @@
               <div class="product-card">
                 <div class="product-img-wrapper">
                   <img
-                    src="./assets/images/products/FL-Treats-n-Meats-Pk.png"
+                    src="./assets/images/products/FL-Happy-Feelings-Pk.png"
                     alt=""
                     class="product-img"
                   />
@@ -423,10 +414,7 @@
         <div class="container">
           <div class="section-sale-box">
             <div class="section-sale-box-inner text-center">
-              <img
-                src="https://placehold.co/600x400/e42020/e82323/png"
-                alt=""
-              />
+              <img src="/assets/images/ClearanceBanner.jpg" alt="" />
               <div class="sale-offer">20% OFF</div>
               <div class="sale-offer-title">CLEARANCE ITEMS</div>
               <a class="sale-offer-link" href="#">See sale items</a>
@@ -434,6 +422,66 @@
           </div>
         </div>
       </section>
+      <section class="section-quots">
+        <h3>Expedited Shipping to get it to your loved one quickly</h3>
+      </section>
+      <div class="section-social-icons">
+        <a href="">
+          <span class="fa fa-facebook"></span>
+        </a>
+        <a href="">
+          <span class="fa fa-twitter"></span>
+        </a>
+        <a href="">
+          <span class="fa fa-instagram"></span>
+        </a>
+      </div>
     </div>
+    <footer class="section-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-4 order-1">
+            <div class="footer-terms-policy text-center text-sm-start">
+              <a href="" class="mb-3"
+                ><img src="./assets/images/logo.svg" alt=""
+              /></a>
+              <p class="mb-0">Terms of Service • Shipping & Returns</p>
+              <p class="mb-0">Refund Policy • Privacy Policy • Contact Us</p>
+              <div class="footer-media-icons">
+                <a href=""><img src="" alt="" /></a>
+                <a href=""><img src="" alt="" /></a>
+                <a href=""><img src="" alt="" /></a>
+                <a href=""><img src="" alt="" /></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-sm-6 pt-lg-4 col-lg-2 order-2 order-lg-1">
+            <ul class="footer-links">
+              <li class="pb-md-2 pb-lg-3">Categories</li>
+              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+            </ul>
+          </div>
+          <div class="col-6 col-sm-6 pt-lg-4 col-lg-3 order-2 order-lg-1">
+            <ul class="footer-links">
+              <li class="pb-md-2 pb-lg-3">Categories</li>
+              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-6 pt-lg-4 col-lg-3 order-1">
+            <div class="footer-call">
+              <a class="mb-md-1 mb-lg-3" href="#"
+                ><img src="/assets/images/earphone.png" alt=""
+              /></a>
+              <a href="">CUSTOMER SERVICE</a>
+              <a href="">(555) 555-5555a</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
