--- a/index.html
+++ b/index.html
@@ -403,6 +403,86 @@
                 </div>
               </div>
             </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Cookie-Me-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Queens-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Kings-Pk.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="product-card">
+                <div class="product-img-wrapper">
+                  <img
+                    src="./assets/images/products/FL-Mr-Hygiene.png"
+                    alt=""
+                    class="product-img"
+                  />
+                  <img
+                    src="./assets/images/products/Gary-Bkgrd-1500px.jpg"
+                    alt=""
+                    class="product-img-bg"
+                  />
+                </div>
+                <div class="product-details">
+                  <div class="product-name">Premium Pack</div>
+                  <div class="product-price">$139.95</div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="text-center my-5">
             <button class="button">Shop Now</button>
@@ -445,13 +525,12 @@
               <a href="" class="mb-3"
                 ><img src="./assets/images/logo.svg" alt=""
               /></a>
-              <p class="mb-0">Terms of Service • Shipping & Returns</p>
-              <p class="mb-0">Refund Policy • Privacy Policy • Contact Us</p>
+              <p class="ms-2 mb-0">Terms of Service • Shipping & Returns</p>
+              <p class="ms-2 mb-0">
+                Refund Policy • Privacy Policy • Contact Us
+              </p>
               <div class="footer-media-icons">
-                <a href=""><img src="" alt="" /></a>
-                <a href=""><img src="" alt="" /></a>
-                <a href=""><img src="" alt="" /></a>
-                <a href=""><img src="" alt="" /></a>
+                <img src="/assets/images/Rectangle.svg" alt="" />
               </div>
             </div>
           </div>
@@ -477,7 +556,7 @@
                 ><img src="/assets/images/earphone.png" alt=""
               /></a>
               <a href="">CUSTOMER SERVICE</a>
-              <a href="">(555) 555-5555a</a>
+              <a href="">(555)555-5555</a>
             </div>
           </div>
         </div>
