--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <img src="./assets/images/logo.svg" alt="" />
           </div>
           <ul class="header-navidation">
-            <li><a href="/">Home</a></li>
-            <li><a href="/products.html">Products</a></li>
-            <li><a href="/faq.html">FAQs</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./products.html">Products</a></li>
+            <li><a href="./faq.html">FAQs</a></li>
             <li class="search-box search-box-rounded">
               <input
                 type="search"
@@ -96,34 +96,34 @@
           <div class="container">
             <div class="gift-cards">
               <div class="gift-card">
-                <img class="main-img" src="/assets/images/idea1.png" alt="" />
+                <img class="main-img" src="./assets/images/idea1.png" alt="" />
                 <img
                   class="hover-img"
-                  src="/assets/images/idea1hover.png"
+                  src="./assets/images/idea1hover.png"
                   alt=""
                 />
               </div>
               <div class="gift-card">
-                <img class="main-img" src="/assets/images/idea2.png" alt="" />
+                <img class="main-img" src="./assets/images/idea2.png" alt="" />
                 <img
                   class="hover-img"
-                  src="/assets/images/idea2hover.png"
+                  src="./assets/images/idea2hover.png"
                   alt=""
                 />
               </div>
               <div class="gift-card">
-                <img class="main-img" src="/assets/images/idea3.png" alt="" />
+                <img class="main-img" src="./assets/images/idea3.png" alt="" />
                 <img
                   class="hover-img"
-                  src="/assets/images/idea3hover.png"
+                  src="./assets/images/idea3hover.png"
                   alt=""
                 />
               </div>
               <div class="gift-card">
-                <img class="main-img" src="/assets/images/idea4.png" alt="" />
+                <img class="main-img" src="./assets/images/idea4.png" alt="" />
                 <img
                   class="hover-img"
-                  src="/assets/images/idea4hover.png"
+                  src="./assets/images/idea4hover.png"
                   alt=""
                 />
               </div>
@@ -213,7 +213,7 @@
                 <div class="col-sm-6">
                   <img
                     class="img-thumbnail"
-                    src="/assets/images/Computerandphone.jpg"
+                    src="./assets/images/Computerandphone.jpg"
                     alt=""
                   />
                 </div>
@@ -231,7 +231,7 @@
             <div class="col-md-6 order-1 pb-4 pb-md-0">
               <img
                 class="img-thumbnail"
-                src="/assets/images/motherandchild.jpg"
+                src="./assets/images/motherandchild.jpg"
                 alt=""
               />
             </div>
@@ -494,7 +494,7 @@
         <div class="container">
           <div class="section-sale-box">
             <div class="section-sale-box-inner text-center">
-              <img src="/assets/images/ClearanceBanner.jpg" alt="" />
+              <img src="./assets/images/ClearanceBanner.jpg" alt="" />
               <div class="sale-offer">20% OFF</div>
               <div class="sale-offer-title">CLEARANCE ITEMS</div>
               <a class="sale-offer-link" href="#">See sale items</a>
@@ -530,7 +530,7 @@
                 Refund Policy • Privacy Policy • Contact Us
               </p>
               <div class="footer-media-icons">
-                <img src="/assets/images/Rectangle.svg" alt="" />
+                <img src="./assets/images/Rectangle.svg" alt="" />
               </div>
             </div>
           </div>
@@ -553,7 +553,7 @@
           <div class="col-12 col-sm-6 pt-lg-4 col-lg-3 order-1">
             <div class="footer-call">
               <a class="mb-md-1 mb-lg-3" href="#"
-                ><img src="/assets/images/earphone.png" alt=""
+                ><img src="./assets/images/earphone.png" alt=""
               /></a>
               <a href="">CUSTOMER SERVICE</a>
               <a href="">(555)555-5555</a>
