--- a/index.html
+++ b/index.html
@@ -80,8 +80,19 @@
       <section class="hero-section">
         <div class="container">
           <div class="hero-section-content">
-            <div class="hero-section-slider"></div>
-            <div class="hero-section-details">Test</div>
+            <div class="hero-section-slider">
+              <div class="hero-section-slider-img">
+                <img
+                  src="./assets/images/products/FL-Premium-Pack.png"
+                  alt=""
+                  class="img-fluid product-img-bg"
+                />
+              </div>
+            </div>
+            <div class="hero-section-details">
+              <h1>Let Your Loved Ones Know You Care in a Big Way!</h1>
+              <button class="button mt-3">Start Shopping</button>
+            </div>
           </div>
         </div>
       </section>
@@ -537,26 +548,30 @@
           <div class="col-6 col-sm-6 pt-lg-4 col-lg-2 order-2 order-lg-1">
             <ul class="footer-links">
               <li class="pb-md-2 pb-lg-3">Categories</li>
-              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
-              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
-              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">EATABLE PACKS</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">PERSONAL CARE</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">APPAREL</a></li>
             </ul>
           </div>
           <div class="col-6 col-sm-6 pt-lg-4 col-lg-3 order-2 order-lg-1">
             <ul class="footer-links">
               <li class="pb-md-2 pb-lg-3">Categories</li>
-              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
-              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
-              <li class="pb-md-2 pb-lg-3"><a href="">testadd</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">(555) 555-5555</a></li>
+              <li class="pb-md-2 pb-lg-3">
+                <a href="">email: msladykthompson@yahoo.com</a>
+              </li>
+              <li class="pb-md-2 pb-lg-3"><a href="">Street Name</a></li>
+              <li class="pb-md-2 pb-lg-3"><a href="">Zip Code, Country</a></li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 pt-lg-4 col-lg-3 order-1">
             <div class="footer-call">
-              <a class="mb-md-1 mb-lg-3" href="#"
+              <!-- <a class="mb-md-1 mb-lg-3" href="#"
                 ><img src="./assets/images/earphone.png" alt=""
               /></a>
               <a href="">CUSTOMER SERVICE</a>
-              <a href="">(555)555-5555</a>
+              <a href="">(555)555-5555</a> -->
+              <img class="img-fluid" src="./assets/images/Frame.png" alt="" />
             </div>
           </div>
         </div>
