--- a/index.html
+++ b/index.html
@@ -78,21 +78,13 @@
     </header>
     <div class="content-wrapper">
       <section class="hero-section">
-        <div class="container">
-          <div class="hero-section-content">
-            <div class="hero-section-slider">
-              <div class="hero-section-slider-img">
-                <img
-                  src="./assets/images/banneritem1.png"
-                  alt=""
-                  class="img-fluid product-img-bg"
-                />
-              </div>
-            </div>
-            <div class="hero-section-details">
-              <h1>Let Your Loved Ones Know You Care in a Big Way!</h1>
-              <button class="button mt-3">Start Shopping</button>
-            </div>
+        <div class="hero-section-content">
+          <div class="hero-section-slider">
+            <img src="./assets/images/banneritem3.png" alt="" />
+          </div>
+          <div class="hero-section-details">
+            <h1>Let Your Loved Ones Know You Care in a Big Way!</h1>
+            <button class="button mt-3">Start Shopping</button>
           </div>
         </div>
       </section>
@@ -579,3 +571,6 @@
     </footer>
   </body>
 </html>
+
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script src="./assets/js/scripts.js"></script>
